kubernetes/apps/default/freshrss/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss
  annotations:
    gatus.home-operations.com/endpoint: |
      client:
        dns-resolver: tcp://${UNIFI_HOST}:53
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames: ["rss.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: freshrss
          port: 10010
